Unhandled Promise Rejection logging in workers should not emit ErrorEvent to host Worker object https://bugs.webkit.org/show_bug.cgi?id=188551

Reviewed by Youenn Fablet.

LayoutTests/imported/w3c:

* web-platform-tests/WebCryptoAPI/derive_bits_keys/ecdh_bits.https.worker-expected.txt:
* web-platform-tests/WebCryptoAPI/derive_bits_keys/ecdh_keys.https.worker-expected.txt:
* web-platform-tests/streams/readable-streams/tee.dedicatedworker-expected.txt:

Source/WebCore:

Previously we dispatched ErrorEvent on the Worker object of the host side when the unhandled promise
rejection happens in the worker. But that was wrong. We should not dispatch such an event and we
should just log the error message.

* dom/ScriptExecutionContext.cpp:
(WebCore::ScriptExecutionContext::reportUnhandledPromiseRejection):

LayoutTests:

* http/wpt/workers/promise-unhandled-rejection.any.worker-expected.txt:
* js/dom/unhandled-promise-rejection-bindings-type-error-in-workers-expected.txt:

Canonical link: https://commits.webkit.org/203652@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234857 268f45cc-cd09-0410-ab3c-d52691b4dbfc